# stark-rings

./: CODEOWNERS  Cargo.toml  README.md  SECURITY.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  linter.yml  typos.toml
crates/linear_algebra/: Cargo.toml
crates/linear_algebra/src/: lib.rs  matrix.rs  ops.rs  sparse_matrix.rs
crates/poly/: Cargo.toml
crates/poly/src/mle/: dense.rs  mod.rs  sparse.rs
crates/poly/src/polynomials/: util.rs
crates/ring/src/: error.rs  lib.rs  monomial.rs  poly_ring.rs  traits.rs  utils.rs
crates/ring/src/balanced_decomposition/: convertible_ring.rs  representatives.rs
crates/ring/src/cyclotomic_ring/: coeff_form.rs  crt.rs  flatten.rs  ntt_form.rs  ring_config.rs
crates/ring/src/cyclotomic_ring/models/babybear/: fq9.rs  mod.rs  ntt.rs
crates/ring/src/cyclotomic_ring/models/frog_ring/: mod.rs  ntt.rs  utils.rs
crates/ring/src/cyclotomic_ring/models/goldilocks/: mod.rs  ntt.rs  utils.rs
crates/ring/src/cyclotomic_ring/models/stark_prime/: decomposition.rs  mod.rs  ntt.rs
linear_algebra/: Cargo.toml
linear_algebra/src/: error.rs  lib.rs  matrix.rs  sparse_matrix.rs  symmetric_matrix.rs
poly/: Cargo.toml
poly/src/: lib.rs
poly/src/mle/: dense.rs  mod.rs  sparse.rs
poly/src/polynomials/: mod.rs  multilinear_polynomial.rs  univariate_polynomial.rs
poly/src/univariate/: dense.rs  mod.rs
ring/: Cargo.toml
ring/src/: lib.rs  monomial.rs  poly_ring.rs  ring.rs  traits.rs
ring/src/balanced_decomposition/: convertible_ring.rs  fq_convertible.rs  mod.rs  representatives.rs
ring/src/cyclotomic_ring/: coeff_form.rs  ntt_form.rs
ring/src/cyclotomic_ring/models/: mod.rs
ring/src/cyclotomic_ring/models/babybear/: fq9.rs  mod.rs
ring/src/cyclotomic_ring/models/frog_ring/: mod.rs
ring/src/cyclotomic_ring/models/goldilocks/: mod.rs
ring/src/cyclotomic_ring/models/stark_prime/: mod.rs
