[workspace]
members = ["crates/linear_algebra", "crates/poly", "crates/ring"]
resolver = "2"
publish = false

[workspace.package]
authors = ["Christian Knabenhans", "Nethermind"]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.0.1-alpha"

[workspace.dependencies]
ark-ff = "0.4"
ark-poly = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std = { version = "0.4", default-features = false }
delegate = "0.13"
derive_more = "0.99"
displaydoc = { version = "0.2", default-features = false }
hashbrown = "0.15"
num-bigint = { version = "0.4", default-features = false }
num-integer = { version = "0.1", default-features = false }
rand = { version = "0.8", default-features = false }
rayon = "1.10"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "3.7", default-features = false }
stark-rings = { path = "./crates/ring", default-features = false }
stark-rings-linalg = { path = "./crates/linear_algebra", default-features = false }
stark-rings-poly = { path = "./crates/poly", default-features = false }
syn = "2.0.87"
thiserror = { version = "2", default-features = false }
zeroize = "1.7"

[workspace.metadata.docs.rs]
# To build locally, use 
# RUSTDOCFLAGS="--html-in-header docs-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = ["--html-in-header", "docs-header.html"]
