[package]
name = "stark-rings-linalg"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
delegate = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
num-integer = { workspace = true }

rayon = { version = "1.10", optional = true }

[features]
default = [ "std" ]
std = [ "ark-std/std", "rand/std" ]
parallel = [ "std", "rayon" ]
